clusters/talos-robbinsdale/apps/argo-cd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  hostnames:
    - "argocd.rajsingh.info"
    - "argocd.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argo-cd-argocd-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
